added sign-up page and made some corrections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a href="#" onclick="myFunction()" class="dropbtn"><img src="./img/icons/user.png" alt="user"></a>
               <div id="myDropdown" class="dropdown-content">
                 <a href="./login.html">Login</a>
-                <a href="#">Sign-up</a>
+                <a href="./signup.html">Sign-up</a>
               </div>
             </div> 
           </li>
