--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             </label>
         </div>
         <div class="container" style="background-color:#f1f1f1">
-            <button  type="button" onclick="" class="cancelbtn"><a href="./uplinktech.html">Cancel</a></button>
+            <a type="button" class="cancelbtn" href="./index.html">cancel</a>
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
     </form>
