--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
         </div>
         <div class="container" style="background-color:#f1f1f1">
             <a type="button" class="cancelbtn" href="./index.html">cancel</a>
+            <span class="psw">User <a href="./signup.html">Sign-up</a></span>
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
     </form>
