--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./signup.css">
-    <title>Document</title>
+    <title>signup</title>
 </head>
 <body>
     <form action="/action_page.php" style="border:1px solid #ccc">
@@ -27,6 +27,7 @@
           </label>
           
           <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+          <p>Have an account &quest; <span><a href="./login.html">login</a></span></p>
       
           <div class="clearfix">
             <!--button type="button" class="cancelbtn"--><a type="button" class="cancelbtn" href="./index.html">Cancel</a><!--/button-->
