--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style>
   
   </style>
-  <title>uplinks techhub</title>
+  <title>Uplinx Energy</title>
 </head>
 <body>
   <header>
@@ -132,64 +132,108 @@
     </div>
   </section>
   <section>
+    <h1 class="feat" style="margin-top: 30px;">FEATURED</h1>
     <div class="container sales">
       <div class="row">
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button type="button" onclick="">Add to cart</button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
       </div>  
       <div class="row">
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
         <div class="col-md-2 box">
-          <h2>Lorem ipsum</h2>
-          <p>lorem ipsum</p>
+          <h2 class="h">Lorem ipsum</h2>
+          <p class="h">lorem ipsum</p>
           <button class="add-to-cart"><a href="#">Add to cart</a></button>
         </div>
       </div>
       
     </div>
   </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+              <div class="col-sm-3">
+          <h5>Information</h5>
+          <ul class="list-unstyled">
+                      <li><a href="https://uplinx.com.ng/index.php?route=information/information&amp;information_id=4">About Us</a></li>
+                      <li><a href="https://uplinx.com.ng/index.php?route=information/information&amp;information_id=6">Delivery Information</a></li>
+                      <li><a href="https://uplinx.com.ng/index.php?route=information/information&amp;information_id=3">Privacy Policy</a></li>
+                      <li><a href="https://uplinx.com.ng/index.php?route=information/information&amp;information_id=5">Terms &amp; Conditions</a></li>
+                    </ul>
+        </div>
+              <div class="col-sm-3">
+          <h5>Customer Service</h5>
+          <ul class="list-unstyled">
+            <li><a href="https://uplinx.com.ng/index.php?route=information/contact">Contact Us</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=account/return/add">Returns</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=information/sitemap">Site Map</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-3">
+          <h5>Extras</h5>
+          <ul class="list-unstyled">
+            <li><a href="https://uplinx.com.ng/index.php?route=product/manufacturer">Brands</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=account/voucher">Gift Certificates</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=affiliate/account">Affiliates</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=product/special">Specials</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-3">
+          <h5>My Account</h5>
+          <ul class="list-unstyled">
+            <li><a href="https://uplinx.com.ng/index.php?route=account/account">My Account</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=account/order">Order History</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=account/wishlist">Wish List</a></li>
+            <li><a href="https://uplinx.com.ng/index.php?route=account/newsletter">Newsletter</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+      <p>Powered By <a href="http://www.uplinx.com.ng">Uplinx Techub</a><br> Uplinx Energy © 2020</p>
+    </div>
+  </footer>
 </body>
 
 </html>
